; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb10.c_libusb_get_device_speed.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb10.c_libusb_get_device_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@LIBUSB_SPEED_UNKNOWN = common dso_local global i32 0, align 4
@LIBUSB_SPEED_LOW = common dso_local global i32 0, align 4
@LIBUSB_SPEED_FULL = common dso_local global i32 0, align 4
@LIBUSB_SPEED_HIGH = common dso_local global i32 0, align 4
@LIBUSB_SPEED_SUPER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libusb_get_device_speed(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = icmp eq %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @LIBUSB_SPEED_UNKNOWN, align 4
  store i32 %7, i32* %2, align 4
  br label %24

8:                                                ; preds = %1
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @libusb20_dev_get_speed(i32 %11)
  switch i32 %12, label %21 [
    i32 129, label %13
    i32 131, label %15
    i32 130, label %17
    i32 128, label %19
  ]

13:                                               ; preds = %8
  %14 = load i32, i32* @LIBUSB_SPEED_LOW, align 4
  store i32 %14, i32* %2, align 4
  br label %24

15:                                               ; preds = %8
  %16 = load i32, i32* @LIBUSB_SPEED_FULL, align 4
  store i32 %16, i32* %2, align 4
  br label %24

17:                                               ; preds = %8
  %18 = load i32, i32* @LIBUSB_SPEED_HIGH, align 4
  store i32 %18, i32* %2, align 4
  br label %24

19:                                               ; preds = %8
  %20 = load i32, i32* @LIBUSB_SPEED_SUPER, align 4
  store i32 %20, i32* %2, align 4
  br label %24

21:                                               ; preds = %8
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* @LIBUSB_SPEED_UNKNOWN, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %19, %17, %15, %13, %6
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @libusb20_dev_get_speed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
